Fix steps panel alignments

--- a/client/src/Components/controls/StepFour.scss
+++ b/client/src/Components/controls/StepFour.scss
@@ -1,7 +1,7 @@
 @import "../../Custom.scss";
 
 .step-four {
-  padding-top: 5rem;
+  padding-top: 4rem;
   display: flex;
   flex-direction: column;
 
@@ -27,7 +27,7 @@
     height: 3rem;
     position: relative;
     margin-left: 2.25rem;
-    margin-bottom: 2rem;
+    margin-bottom: 0.5rem;
 
     .line {
       margin-top: 0.6rem;
@@ -101,7 +101,7 @@
   .step-four-msg {
     font-size: 1.4rem;
     color: $dark-text;
-    margin-bottom: 2.2rem;
+    margin-bottom: 2rem;
     text-align: center;
     width: 80%;
     align-self: center;
@@ -114,7 +114,7 @@
     letter-spacing: normal;
     color: $main-color;
     align-self: center;
-    margin-bottom: 2.2rem;
+    margin-bottom: 2rem;
     text-decoration: none;
     padding: 0.2rem 0.4rem;
     transition: background-color, color, 0.2s ease-out;
@@ -124,54 +124,56 @@
       color: #fff;
     }
   }
+}
+
+.step-four-actions {
+  align-self: flex-end;
+  margin-bottom: 2rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 
   hr {
     border-top: 1px solid lighten($dark-divider-line, 50%);
     margin: 0 0 4rem 0;
   }
 
-  .step-four-actions {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  .step-four-action {
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: $check-mark-white;
+    background-color: $main-color;
+    border: none;
+    padding: 0.5rem 2rem;
+    border-radius: 3rem;
+    box-shadow: 0 2.4px 5.6px 0 $greyed-out-chart-content;
+    align-self: flex-end;
+    outline: none;
+    transition: translateY, box-shadow, 0.2s ease-out;
 
-    .step-four-action {
-      font-size: 1.1rem;
-      font-weight: bold;
-      color: $check-mark-white;
-      background-color: $main-color;
-      border: none;
-      padding: 0.5rem 2rem;
-      border-radius: 3rem;
-      box-shadow: 0 2.4px 5.6px 0 $greyed-out-chart-content;
-      align-self: flex-end;
-      outline: none;
-      transition: translateY, box-shadow, 0.2s ease-out;
+    &:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 5px 10px 0 rgba($greyed-out-chart-content, 0.8);
+    }
 
-      &:hover {
-        transform: translateY(-1px);
-        box-shadow: 0 5px 10px 0 rgba($greyed-out-chart-content, 0.8);
-      }
+    &:active {
+      transform: translateY(1px);
+      box-shadow: 0 2px 3px 0 rgba(#000, 0.4);
+    }
 
-      &:active {
-        transform: translateY(1px);
-        box-shadow: 0 2px 3px 0 rgba(#000, 0.4);
-      }
+    &:disabled {
+      background-color: $inactive-button-bg;
+    }
 
-      &:disabled {
-        background-color: $inactive-button-bg;
-      }
+    &-back {
+      @extend .step-four-action;
+      background-color: $progress-circle-light-blue-bg;
+      color: $main-color;
+      padding: 0.5rem 3rem;
+    }
 
-      &-back {
-        @extend .step-four-action;
-        background-color: $progress-circle-light-blue-bg;
-        color: $main-color;
-        padding: 0.5rem 3rem;
-      }
-
-      &-continue {
-        @extend .step-four-action;
-      }
+    &-continue {
+      @extend .step-four-action;
     }
   }
 }
